--- a/src/index.htm
+++ b/src/index.htm
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>To Do List</title>
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <script src="script.js" type="module"></script>
   </head>
   <body>
     <div class="todo" data-js-todo>
-      <h1 class="todo__title">To Do list</h1>
+      <h1 class="todo__title">To Do List</h1>
       <form class="todo__form" data-js-todo-new-task-form>
         <div class="todo__field field">
-          <labe class="field__label" for="new-task">New task title</labe>
+          <label class="field__label" for="new-task"> New task </label>
           <input
             class="field__input"
             id="new-task"
@@ -25,7 +25,7 @@
       </form>
       <form class="todo__form" data-js-todo-search-task-form>
         <div class="todo__field field">
-          <labe class="field__label" for="search-task">Search task</labe>
+          <label class="field__label" for="search-task"> Search task </label>
           <input
             class="field__input"
             id="search-task"
@@ -38,87 +38,18 @@
       </form>
       <div class="todo__info">
         <div class="todo__total-tasks">
-          Total Tasks: <span data-js-todo-total-tasks>0</span>
+          Total tasks: <span data-js-todo-total-tasks>0</span>
         </div>
         <button
           class="todo__delete-all-button"
           type="button"
-          dara-js-todo-delete-all-button
+          data-js-todo-delete-all-button
         >
           Delete all
         </button>
       </div>
-      <ul class="todo__list" data-js-todo-list>
-        <li class="todo__item todo-item" data-js-todo-item>
-          <input
-            class="todo-item__checkbox"
-            id="todo-1"
-            type="checkbox"
-            data-js-todo-item-checkbox
-          />
-          <label for="todo-1" class="todo-item__label" data-js-todo-item-label
-            >todo 1</label
-          >
-          <button
-            class="todo-item__delete-button"
-            type="button"
-            aria-label="Delete"
-            title="Delete"
-            data-js-todo-item-button
-          >
-            <svg
-              width="20"
-              height="20"
-              viewBox="0 0 20 20"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M15 5L5 15M5 5L15 15"
-                stroke="#757575"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </button>
-        </li>
-        <li class="todo__item todo-item" data-js-todo-item>
-          <input
-            class="todo-item__checkbox"
-            id="todo-1"
-            type="checkbox"
-            data-js-todo-item-checkbox
-          />
-          <label for="todo-1" class="todo-item__label" data-js-todo-item-label
-            >todo 2</label
-          >
-          <button
-            class="todo-item__delete-button"
-            type="button"
-            aria-label="Delete"
-            title="Delete"
-            data-js-todo-item-button
-          >
-            <svg
-              width="20"
-              height="20"
-              viewBox="0 0 20 20"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M15 5L5 15M5 5L15 15"
-                stroke="#757575"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </button>
-        </li>
-      </ul>
-      <div class="todo__empty-message" data-js-todo-epty-message></div>
+      <ul class="todo__list" data-js-todo-list></ul>
+      <div class="todo__empty-message" data-js-todo-empty-message></div>
     </div>
   </body>
 </html>
